<?xml version="1.0" encoding="UTF-8"?>
<!--
 	Copyright by Lars Geyer-Blaumeiser <lars@lgblaumeiser.de>

	Licensed under MIT license

	SPDX-License-Identifier: MIT
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.lgblaumeiser</groupId>
	<artifactId>ptm_rest</artifactId>
	<version>1.3-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>ptm_rest</name>
	<description>Rest interface for Project Time Manager</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>10</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-thymeleaf</artifactId>
	    </dependency>
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-devtools</artifactId>
	        <optional>true</optional>
	    </dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>org.springframework.boot</groupId> -->
<!-- 			<artifactId>spring-boot-starter-data-mongodb</artifactId> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
      		<groupId>com.fasterxml.jackson.core</groupId>
      		<artifactId>jackson-annotations</artifactId>
      		<version>2.9.6</version><!--$NO-MVN-MAN-VER$-->
		</dependency>
		<dependency>
			<groupId>de.lgblaumeiser</groupId>
			<artifactId>datamanager</artifactId>
			<version>1.3-SNAPSHOT</version>
		</dependency>
  	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			    <configuration>
    	    		<jvmArguments>--add-modules java.xml.bind</jvmArguments>
        			<mainClass>org.springframework.samples.petclinic.PetClinicApplication</mainClass>
    			</configuration>
			</plugin>
      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-surefire-plugin</artifactId>
        		<configuration>
          			<redirectTestOutputToFile>true</redirectTestOutputToFile>
          			<reportsDirectory>../../shippable/testresults</reportsDirectory>
          			<argLine>-Xmx1024m</argLine>
        		</configuration>
        		<dependencies>
          			<dependency>
            			<groupId>org.ow2.asm</groupId>
            			<artifactId>asm</artifactId>
            			<version>6.1.1</version>
          			</dependency>
        		</dependencies>
      		</plugin>
      		<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<configuration>
          			<source>10</source>
          			<target>10</target>
        		</configuration>
				<dependencies>
        			<dependency>
            			<groupId>org.ow2.asm</groupId>
            			<artifactId>asm</artifactId>
            			<version>6.1.1</version>
        			</dependency>
				</dependencies>
      		</plugin>
	  		<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.1</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
	  		</plugin>
		</plugins>
	</build>
</project>
